--- a/app/views/addresses/_address.html.erb
+++ b/app/views/addresses/_address.html.erb
@@ -1,5 +1,6 @@
 <div class="address">
 	<p>
+		<%- @address.name %> <br>
 		<%= @address.address_1 %> <br>
 		<%= @address.address_2 %> <br>
 		<%= @address.city %> , <%= @address.state %> , <%= @address.zip %> <br>
