--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -1,6 +1,10 @@
 <%= form_for [current_user, @address] do |f| %> 
 	<%= f.error_messages %>
 	<p>
+		<%= f.label :name %>
+		<%= f.text_field :name %>
+	</p>
+	<p>
 		<%= f.label :address_1 %>
 		<%= f.text_field :address_1 %>
 	</p>
