--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -1,3 +1,10 @@
-<h1> Address Details </h1>
+<h1> Address </h1>
 
 <%= render @address %>
+
+<h3> Spaces </h3>
+<ul>
+	<% @address.spaces.each do |space| %>
+		<li> <%= link_to space.name, user_space_path(current_user, space) %> </li>
+	<% end %>
+</ul>
