--- a/app/views/planters/_form.html.erb
+++ b/app/views/planters/_form.html.erb
@@ -6,15 +6,19 @@
 	</p>
 	<p>
 		<%= f.label "Length in Feet" %>
-		<%= f.number_field :length, step: 2 %>
+		<%= f.number_field :length_ft %>
 	</p>
 	<p>
 		<%= f.label "Width in Feet" %>
-		<%= f.number_field :width %>
+		<%= f.number_field :width_ft %>
 	</p>
 	<p>
 		<%= f.label "Height in Feet" %>
-		<%= f.number_field :height %>
+		<%= f.number_field :height_ft %>
+	</p>
+	<p>
+		<%= f.label "Depth in Feet" %>
+		<%= f.number_field :depth_ft %>
 	</p>
 	<p>
 		<%= f.label :description %>
