--- a/app/views/plants/_plant.html.erb
+++ b/app/views/plants/_plant.html.erb
@@ -1,9 +1,9 @@
 <div class="plant">
 	<p> 
 		Name: <%= @plant.name %> <br>
-		Length: <%= @plant.length %> <br>
-		Width: <%= @plant.width %> <br>
-		Area: <%= @plant.area %> <br>
+		Length: <%= @plant.length_ft %> feet <%= @plant.length_inch %> inches <br>
+		Width: <%= @plant.width_ft %> feet <%= @plant.width_inch %> inches <br>
+		Area: <%= @plant.area %> feet <%= @plant.height_inch %> inches <br>
 		Volume: <%= @plant.volume %> <br>
 	</p>
 <div> 
