--- a/app/views/spaces/_space.html.erb
+++ b/app/views/spaces/_space.html.erb
@@ -1,9 +1,9 @@
 <div class="space">
 	<p>
 		Name: <%= @space.name %> <br>
-		Length: <%= @space.length %> <br>
-		Width: <%= @space.width %> <br>
-		Height: <%= @space.height %> <br>
+		Length: <%= @space.length_ft %> feet <%= @space.length_inch %> inches <br>
+		Width: <%= @space.width_ft %>  feet <%= @space.width_inch %> inches <br>
+		Height: <%= @space.height_ft %>  feet <%= @space.height_inch %> inches <br>
 		Floor: <%= @space.floor %> <br>
 		Rooftop: <%= @space.is_rooftop %> <br>
 		Ground: <%= @space.is_ground %> <br>
