--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -7,9 +7,12 @@
 		<th> Name </th>
 		<th> Address </th>
 		<th> Description </th>
-		<th> Length </th>
-		<th> Width </th>
-		<th> Height </th>
+		<th> Length Ft</th>
+		<th> Length Inch </th>
+		<th> Width Ft</th>
+		<th> Width Inch </th>
+		<th> Height Ft</th>
+		<th> Height Inch </th>
 		<th> Floor </th>
 		<th> Rooftop </th>
 		<th> Ground </th>
@@ -19,9 +22,12 @@
 			<td> <%= space.name %> </td>
 			<td> <%= space.address.address_1 %> </td>
 			<td> <%= space.description %> </td>
-			<td> <%= space.length %> </td>
-			<td> <%= space.width %> </td>
-			<td> <%= space.height %> </td>
+			<td> <%= space.length_ft %> </td>
+			<td> <%= space.length_inch %> </td>
+			<td> <%= space.width_ft %> </td>
+			<td> <%= space.width_inch %> </td>
+			<td> <%= space.height_ft %> </td>
+			<td> <%= space.height_inch %> </td>
 			<td> <%= space.floor %> </td>
 			<td> <%= space.is_rooftop %> </td>
 			<td> <%= space.is_ground %> </td>
