--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,6 +12,14 @@
 		<%= f.label :user_last_name %>
 		<%= f.text_field :user_last_name %>
 	</p>
+	<p> 
+		<%= f.label :is_admin %>
+		<%= f.check_box :is_admin %>
+	</p>
+	<p>
+		<%= f.label :is_designer %>
+		<%= f.check_box :is_designer %>
+	</p>
 	</p>
 		<%= f.label :password %> 
 		<%= f.password_field :password %>
