--- a/app/views/plants/_form.html.erb
+++ b/app/views/plants/_form.html.erb
@@ -5,16 +5,16 @@
 		<%= f.text_field :name %>
 	</p>
 	<p>
-		<%= f.label :length %>
-		<%= f.number_field :length %>
+		<%= f.label "Length in Feet" %>
+		<%= f.number_field :length_ft %>
 	</p>
 	<p>
-		<%= f.label :width %>
-		<%= f.number_field :width %>
+		<%= f.label "Width in Feet" %>
+		<%= f.number_field :width_ft %>
 	</p>
 	<p>
-		<%= f.label :height %>
-		<%= f.number_field :height %>
+		<%= f.label "Height in Feet" %>
+		<%= f.number_field :height_ft %>
 	</p>
 	<p>
 		<%= f.label :description %>
