--- a/app/views/plants/_form.html.erb
+++ b/app/views/plants/_form.html.erb
@@ -4,21 +4,34 @@
 		<%= f.label :name %>
 		<%= f.text_field :name %>
 	</p>
+	<p> 
+		<%= f.label :price %>
+		<%= f.number_field :price_cents %>
+	</p>
 	<p>
-		<%= f.label "Length in Feet" %>
+		<%= f.label "Length Feet" %>
 		<%= f.number_field :length_ft %>
-	</p>
+		<%= f.label "Length Inches" %>
+		<%= f.number_field :length_inch %> 
 	<p>
-		<%= f.label "Width in Feet" %>
+		<%= f.label "Width Feet" %>
 		<%= f.number_field :width_ft %>
+		<%= f.label "Width Inches" %>
+		<%= f.number_field :width_inch %>
 	</p>
 	<p>
-		<%= f.label "Height in Feet" %>
+		<%= f.label "Height Feet" %>
 		<%= f.number_field :height_ft %>
+		<%= f.label "Height Inches" %>
+		<%= f.number_field :height_inch %>
 	</p>
 	<p>
 		<%= f.label :description %>
 		<%= f.text_area  :description %> 
+	</p>
+	<p>
+		<%= f.label :tags, "Associate with Tags" %><br>
+		<%= f.collection_select(:tag_ids, Tag.all, :id, :name, {}, {:multiple => true}) %>
 	</p>
 	<p>
 		<%= f.submit %>
