--- a/app/views/plants/_plant.html.erb
+++ b/app/views/plants/_plant.html.erb
@@ -3,7 +3,6 @@
 		Name: <%= @plant.name %> <br>
 		Length: <%= @plant.length_ft %> feet <%= @plant.length_inch %> inches <br>
 		Width: <%= @plant.width_ft %> feet <%= @plant.width_inch %> inches <br>
-		Area: <%= @plant.area %> feet <%= @plant.height_inch %> inches <br>
-		Volume: <%= @plant.volume %> <br>
+		Height: <%= @plant.height_ft %> feet <%= @plant.height_inch %> inches <br>
 	</p>
 <div> 
