--- a/app/views/planters/index.html.erb
+++ b/app/views/planters/index.html.erb
@@ -16,7 +16,7 @@
 
 	<% @planters.each do |planter| %>
 		<tr>
-			<td> <%= link_to planter.name, planter_path(planter) %> </td>
+			<td> <%= planter.name%> </td>
 			<td> <%= planter.length_ft %> </td>
 			<td> <%= planter.length_inch %> </td>
 			<td> <%= planter.width_ft %> </td>
@@ -26,6 +26,11 @@
 			<td> <%= planter.depth_ft %> </td>
 			<td> <%= planter.depth_inch %> </td>
 			<td> <%= planter.description %> </td>
+			<td> <%= link_to 'Show', planter_path(planter) %> </td>
 		</tr>
 	<% end %>
 </table> 
+
+<% content_for(:admin_options) do %>
+	<%= link_to "New Planter", new_planter_path %>
+<% end %>
