--- a/app/views/planters/show.html.erb
+++ b/app/views/planters/show.html.erb
@@ -2,10 +2,11 @@
 
 <%= render @planter %>
 
-<% content_for :admin_options do %>
-
+<% content_for :details do %>
 	<h3> Tags </h3> 
 	<%= render @tags %>
-	
-	<%= link_to "Edit", edit_planter_path(@planter) %> <%= link_to "Delete", planter_path(@planter), method: :delete %> 
+<% end %> 
+
+<% content_for :admin_options do %>
+	<%= link_to "Edit", edit_planter_path(@planter) %> | <%= link_to "Delete", planter_path(@planter), method: :delete %> 
 <% end %>
