--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -2,10 +2,11 @@
 
 <%= render @plant %>
 
-<% content_for :admin_options do %>
-
+<% content_for :details do %>
 	<h3> Tags </h3> 
 	<%= render @tags %>
+<% end %> 
 
-	<%= link_to "Edit", edit_plant_path(@plant) %> <%= link_to "Delete", plant_path(@plant), method: :delete %>
+<% content_for :admin_options do %>
+	<%= link_to "Edit", edit_plant_path(@plant) %> | <%= link_to "Delete", plant_path(@plant), method: :delete %>
 <% end %>
