--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -10,7 +10,7 @@
 	</p>
 	<p>
 		<%= f.label :description %>
-		<%= f.text_area :description%> 
+		<%= f.text_field :description %> 
 	</p>
 	<p>
 		<%= f.submit %>
