--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -2,18 +2,19 @@
 
 <table>
 	<tr>
+		<th> Description </th>
 		<th> Request_ID </th>
 		<th> Request_Date </th>
 		<th> Space_ID </th>
-		<th> Description </th>
 	</tr>
 
 	<% @requests.each do |request| %>
 		<tr>
+			<td> <%= request.description %> </td>
 			<td> <%= request.id %> </td> 
 			<td> <%= request.created_at %> </td>
 			<td> <%= request.space_id %> </td>
-			<td> <%= request.description %> </td>
+			<td> <%= link_to 'Assignments', request_request_assignments_path(request) %> </td>
 			<td> <%= link_to 'Show', user_request_path(current_user, request) %> </td>
 			<td> <%= link_to 'Edit', edit_user_request_path(current_user, request) %> </td>
 			<td> <%= link_to 'Delete', user_request_path(current_user, request), method: :delete %> </td>
