--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,3 +1,20 @@
 <h1> Tag Index </h1> 
 
-<%= render @tags %> 
+<table> 
+	<tr>
+		<th> Tag Name </th>
+		<th> Tag Details </th>
+	</tr>
+
+	<% @tags.each do |tag| %>
+		<tr>
+			<td> <%= tag.name %> </td>
+			<td> <%= tag.description %> </td>
+			<td> <%= link_to 'Show', tag_path(tag) %> </td>
+		</tr>
+	<% end %>
+</table>
+
+<% content_for(:admin_options) do %>
+	<%= link_to "New Tag", new_tag_path %> | <%= link_to "All Tag Assignments", controller: 'tag_assignments', action: 'index' %>
+<% end %>
