--- a/app/views/request_assignments/_request_assignment.html.erb
+++ b/app/views/request_assignments/_request_assignment.html.erb
@@ -3,7 +3,7 @@
 		Request ID: <%= @request_assignment.request_id %> <br>
 		Requesed Plant ID: <%= @request_assignment.request_plant_id %> </br>
 		Request Quantity: <%= @request_assignment.quantity %> <br>
-		Price When Requested: <%= @request_assignment.price_when_requested %> <br>
-		Price Estimate: <%= @request_assignment.price_estimate %> <br>
+		Price When Requested: <%= @request_assignment.price_cents_when_requested %> <br>
+		Price Estimate: <%= @request_assignment.price_cents_estimate %> <br>
 	</p>
 </div>
