--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -4,5 +4,6 @@
 		Request Date: <%= @request.created_at %> <br>
 		Request Space: <%= @request.space_id %> <br>
 		Request Description: <%= @request.description %> <br>
+		Request Submitted: <%= @request.submitted %> <br>
 	</p>
 </div> 
