--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -6,6 +6,7 @@
 		<th> Request_ID </th>
 		<th> Request_Date </th>
 		<th> Space_ID </th>
+		<th> Submitted </th>
 	</tr>
 
 	<% @requests.each do |request| %>
@@ -14,6 +15,7 @@
 			<td> <%= request.id %> </td> 
 			<td> <%= request.created_at %> </td>
 			<td> <%= request.space_id %> </td>
+			<td> <%= request.submitted %> </td> 
 			<td> <%= link_to 'Assignments', request_request_assignments_path(request) %> </td>
 			<td> <%= link_to 'Show', user_request_path(current_user, request) %> </td>
 			<td> <%= link_to 'Edit', edit_user_request_path(current_user, request) %> </td>
