--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -2,7 +2,10 @@
 
 <%= render @request %>
 
-<%= link_to 'Request Assignments', request_request_assignments_path(@request) %> 
+<%= link_to 'Request Assignments', request_request_assignments_path(@request) %> | 
+<%= link_to 'Estimate Price', request_estimate_price_path(current_user, @request) %> | 
+<%= link_to 'Submit Request', request_toggle_submit_path(current_user, @request) %> 
+
 
 <% content_for :details do %> 
 	<h3> Requested Plants </h3>
