--- a/app/views/plants/_plant.html.erb
+++ b/app/views/plants/_plant.html.erb
@@ -4,5 +4,6 @@
 		Length: <%= @plant.length_ft %> feet <%= @plant.length_inch %> inches <br>
 		Width: <%= @plant.width_ft %> feet <%= @plant.width_inch %> inches <br>
 		Height: <%= @plant.height_ft %> feet <%= @plant.height_inch %> inches <br>
+		Price Cents: <%= @plant.price_cents %> 
 	</p>
 <div> 
