--- a/app/views/request_assignments/_request_assignment.html.erb
+++ b/app/views/request_assignments/_request_assignment.html.erb
@@ -5,5 +5,6 @@
 		Request Quantity: <%= @request_assignment.quantity %> <br>
 		Price When Requested: <%= @request_assignment.price_cents_when_requested %> <br>
 		Price Estimate: <%= @request_assignment.price_cents_estimate %> <br>
+		Description: <%= @request_assignment.description %> <br>
 	</p>
 </div>
