--- a/app/views/request_assignments/show.html.erb
+++ b/app/views/request_assignments/show.html.erb
@@ -1,3 +1,12 @@
 <h1> Show Request Assignment </h1>
 
 <%= render @request_assignment %> 
+
+<br>
+
+<%= link_to 'Edit', edit_request_request_assignment_path(@request_assignment.request_id, @request_assignment) %> |
+<%= link_to 'Delete', request_request_assignment_path(@request_assignment.request_id, @request_assignment), method: :delete %> 
+<br>
+<%= link_to 'Associated Request', user_request_path(current_user, @request_assignment.request_id) %> |
+<%= link_to 'Associated Assignments', request_request_assignments_path(@request_assignment.request_id) %> 
+
