--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -16,13 +16,18 @@
 			<td> <%= request.created_at %> </td>
 			<td> <%= request.space_id %> </td>
 			<td> <%= request.submitted %> </td> 
-			<td> <%= link_to 'Assignments', request_request_assignments_path(request) %> </td>
 			<td> <%= link_to 'Show', user_request_path(current_user, request) %> </td>
 			<td> <%= link_to 'Edit', edit_user_request_path(current_user, request) %> </td>
 			<td> <%= link_to 'Delete', user_request_path(current_user, request), method: :delete %> </td>
+			<td> <%= link_to 'Assignments', request_request_assignments_path(request) %> </td>
+			<td> <%= link_to 'Designs', request_suggested_designs_path(current_user, request) %> </td>
 		</tr>
 	<% end %>
 	<tr>
 		<td> <%= link_to "New Request", new_user_request_path(current_user) %> </td>
 	</tr>
 </table>
+
+<% content_for :admin_options do %>
+	<%= link_to "All Requests", all_requests_path %> | <%= link_to "All Submitted Requests", all_submitted_requests_path %>
+<% end %>
