--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -4,7 +4,8 @@
 
 <%= link_to 'Request Assignments', request_request_assignments_path(@request) %> | 
 <%= link_to 'Estimate Price', request_estimate_price_path(current_user, @request) %> | 
-<%= link_to 'Submit Request', request_toggle_submit_path(current_user, @request) %> 
+<%= link_to 'Submit Request', request_toggle_submit_path(current_user, @request) %> |
+<%= link_to 'Designs', request_suggested_designs_path(current_user, @request) %> 
 
 
 <% content_for :details do %> 
