--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -16,6 +16,4 @@
 	<% end %>
 </table>
 
-<% content_for(:admin_options) do %>
-	<%= link_to "New Plant", new_plant_path %> 
-<% end %>
+<%= render 'plant_links' %>
