--- a/app/views/request_assignments/show.html.erb
+++ b/app/views/request_assignments/show.html.erb
@@ -4,9 +4,5 @@
 
 <br>
 
-<%= link_to 'Edit', edit_request_request_assignment_path(@request_assignment.request_id, @request_assignment) %> |
-<%= link_to 'Delete', request_request_assignment_path(@request_assignment.request_id, @request_assignment), method: :delete %> 
-<br>
-<%= link_to 'Associated Request', user_request_path(current_user, @request_assignment.request_id) %> |
-<%= link_to 'Associated Assignments', request_request_assignments_path(@request_assignment.request_id) %> 
+<%= render 'request_assignment_options' %>
 
