--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -5,5 +5,7 @@
 		Request Space: <%= @request.space_id %> <br>
 		Request Description: <%= @request.description %> <br>
 		Request Submitted: <%= @request.submitted %> <br>
+		Request Viewed: <%= @request.viewed %> <br>
+		Request Designed: <%= @request.designed %> <br>
 	</p>
 </div> 
