--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -7,6 +7,8 @@
 		<th> Request_Date </th>
 		<th> Space_ID </th>
 		<th> Submitted </th>
+		<th> Viewed </th>
+		<th> Designed </th>
 	</tr>
 
 	<% @requests.each do |request| %>
@@ -16,6 +18,8 @@
 			<td> <%= request.created_at %> </td>
 			<td> <%= request.space_id %> </td>
 			<td> <%= request.submitted %> </td> 
+			<td> <%= request.viewed %> </td>
+			<td> <%= request.designed %> </td>
 			<td> <%= link_to 'Show', user_request_path(current_user, request) %> </td>
 			<td> <%= link_to 'Edit', edit_user_request_path(current_user, request) %> </td>
 			<td> <%= link_to 'Delete', user_request_path(current_user, request), method: :delete %> </td>
@@ -23,11 +27,6 @@
 			<td> <%= link_to 'Designs', request_suggested_designs_path(current_user, request) %> </td>
 		</tr>
 	<% end %>
-	<tr>
-		<td> <%= link_to "New Request", new_user_request_path(current_user) %> </td>
-	</tr>
 </table>
 
-<% content_for :admin_options do %>
-	<%= link_to "All Requests", all_requests_path %> | <%= link_to "All Submitted Requests", all_submitted_requests_path %>
-<% end %>
+<%= render 'request_links' %>
