--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -27,10 +27,8 @@
 			<td> <%= link_to 'Delete', user_address_path(current_user, address), method: :delete %> </td>
 		</tr>
 	<% end %>
-	<tr>
-		<td> <%= link_to "New Address", new_user_address_path(current_user) %> </td>
-	</tr>
 </table>
 
+<%= render 'address_links' %>
 
 
