--- a/app/views/designs/show.html.erb
+++ b/app/views/designs/show.html.erb
@@ -2,6 +2,4 @@
 
 <%= render @design %>
 
-<% content_for(:admin_options) do %>
-	<%= link_to "Edit", edit_user_design_path(current_user, @design) %> | <%= link_to "Delete", user_design_path(current_user, @design), method: :delete %> 
-<% end %>
+<%= render 'design_options' %>
