--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -7,6 +7,4 @@
 	<%= render @tags %>
 <% end %> 
 
-<% content_for :admin_options do %>
-	<%= link_to "Edit", edit_plant_path(@plant) %> | <%= link_to "Delete", plant_path(@plant), method: :delete %>
-<% end %>
+<%= render 'plant_options' %>
