--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -19,6 +19,4 @@
 	</ul>
 <% end %>
 
-<% content_for :admin_options do %>
-	<%= link_to "Edit", edit_tag_path(@tag) %> | <%= link_to "Delete", tag_path(@tag), method: :delete %> 
-<% end %>
+<%= render 'tag_options' %>
