--- a/app/views/designs/index.html.erb
+++ b/app/views/designs/index.html.erb
@@ -3,7 +3,6 @@
 <table>
 	<tr>
 		<th> Design ID </th>
-		<th> User ID </th>
 		<th> Space ID </th>
 		<th> Request ID </th>
 		<th> Description </th>
@@ -17,7 +16,6 @@
 	<% @designs.each do |design| %>
 		<tr>
 			<td> <%= design.id %> </td>
-			<td> <%= design.user_id %> </td>
 			<td> <%= design.space_id %> </td>
 			<td> <%= design.request_id %> </td>
 			<td> <%= design.description %> </td>
@@ -26,7 +24,7 @@
 			<td> <%= design.reviewed %> </td>
 			<td> <%= design.accepted %> </td>
 			<td> <%= design.active %> </td>
-			<td> <%= link_to 'Show', user_design_path(current_user, design) %> </td>
+			<td> <%= link_to 'Show', design_path(design) %> </td>
 		</tr>
 	<% end %>
 </table>
