--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 			</tr>
 			<tr> 
 				<th> </th>
-				<th> <%= link_to "Designs", user_designs_path(current_user) %> </th> 
+				<th> <%= link_to "Designs", designs_path %> </th> 
 			</tr>
 		<% else %>
 			<tr>
