--- a/app/views/planters/_planter.html.erb
+++ b/app/views/planters/_planter.html.erb
@@ -6,5 +6,6 @@
 		Height: <%= @planter.height_ft %> feet and <%= @planter.height_inch %> inches <br>
 		Depth: <%= @planter.depth_ft %> feet and <%= @planter.depth_inch %> inches<br>
 		Description: <%= @planter.description %> <br>
+		Price Cents: <%= @planter.price_cents %> 
 	</p>
 </div>
