--- a/app/views/design_assignments/_form.html.erb
+++ b/app/views/design_assignments/_form.html.erb
@@ -18,7 +18,7 @@
 	</p>
 	<p>
 		<%= f.label :comments %>
-		<%= f.label :comments %> 
+		<%= f.text_area :comments %> 
 	</p>
 	<%= f.submit %>
 <% end %>
