--- a/app/views/designs/_design_options.html.erb
+++ b/app/views/designs/_design_options.html.erb
@@ -15,8 +15,9 @@
 
 
 <% content_for :admin_options do %>
+	| <%= link_to "Generate Assignments", design_gen_assignments_path(@design) %>
 	| <%= link_to "Toggle Active", design_toggle_active_path(@design) %> 
-	| <%= link_to "Edit", edit_user_design_path(current_user, @design) %> 
-	| <%= link_to "Delete", user_design_path(current_user, @design), method: :delete %> 
+	| <%= link_to "Edit", edit_design_path(@design) %> 
+	| <%= link_to "Delete", design_path(@design), method: :delete %> 
 	|
 <% end %>
